Updates for adding amend contact details to respondent representative next step menu.